--- a/_newsroom/Speeches/2016.md
+++ b/_newsroom/Speeches/2016.md
@@ -5,7 +5,7 @@ description: ""
 third_nav_title: Speeches
 ---
 <html>
-<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
+<img class="MicIcon" src="/images/icons/ico_speeches.png" align="left"><br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br><br>
 <font size="+2"><b>March 2016</b></font><br><br>
 
 24 March 2016<br>
