--- a/_newsroom/Speeches/2010.md
+++ b/_newsroom/Speeches/2010.md
@@ -6,7 +6,7 @@ third_nav_title: Speeches
 ---
 <html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
-<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
+<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br><br>
 <font size="+2"><b>November 2010</b></font><br><br>
 
 2 November 2010<br>
