--- a/_newsroom/Speeches/2009.md
+++ b/_newsroom/Speeches/2009.md
@@ -6,7 +6,7 @@ third_nav_title: Speeches
 ---
 <html>
 <img class="MicIcon" src="/images/icons/ico_speeches.png" align="left">
-<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br>
+<br><font align="center" color="green" size="+3">&nbsp;&nbsp;&nbsp;&nbsp;Speeches</font><br><br><br><br>
 <font size="+2"><b>February 2009</b></font><br><br>
 	
 13 February 2009<br>
