--- a/_newsroom/Media Articles/2020.md
+++ b/_newsroom/Media Articles/2020.md
@@ -1,6 +1,6 @@
 ---
 title: "2020"
-permalink: /newsroom/Media-Articles/2020
+permalink: /newsroom/Media-Articles/2020/
 description: ""
 third_nav_title: Media Articles
 ---
@@ -9,7 +9,7 @@ third_nav_title: Media Articles
 <br><br><br><br>
 <font size="+2"><b>April 2020</b></font><br><br>
 7 April 2020<br>
-<a class="hyperlink" href="http://www.workfare.gov.sg/Media%20Articles/Documents/More%20income%20relief%20for%20lower-wage%20workers%20during%20Covid19%20crisis.pdf">More income relief for lower-wage workers during Covid19 crisis, says Zaqy Mohamad (600KB)</a>
+<a class="hyperlink" href="http://www.workfare.gov.sg/files/pdf-media-articles/2020/april/More%20income%20relief%20for%20lower-wage%20workers%20during%20Covid19%20crisis.pdf">More income relief for lower-wage workers during Covid19 crisis, says Zaqy Mohamad (600KB)</a>
 
 <style>
 img.PressReleaseIcon {
