--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -1,6 +1,6 @@
 ---
 title: "2019"
-permalink: /newsroom/Media-Articles/2019
+permalink: /newsroom/Media-Articles/2019/
 description: ""
 third_nav_title: Media Articles
 ---
@@ -10,16 +10,16 @@ third_nav_title: Media Articles
 	
 <font size="+2"><b>November 2019</b></font><br><br>
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(English).pdf">Workfare - With You For A Better Tomorrow (English) 2.3MB </a><br><br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/november/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20-%20English.pdf">Workfare - With You For A Better Tomorrow (English) 2.3MB </a><br><br>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Chinese).pdf">Workfare - With You For A Better Tomorrow (Chinese) 421B</a><br><br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/november/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20-%20Chinese.pdf">Workfare - With You For A Better Tomorrow (Chinese) 421B</a><br><br>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Malay).pdf">Workfare - With You For A Better Tomorrow (Malay) 779KB</a><br><br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/november/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20-%20Malay.pdf">Workfare - With You For A Better Tomorrow (Malay) 779KB</a><br><br>
 
 22 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20(Tamil).pdf">Workfare - With You For A Better Tomorrow (Tamil) 306KB</a><br><br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/november/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20-%20Tamil.pdf">Workfare - With You For A Better Tomorrow (Tamil) 306KB</a><br><br>
 
 21 November 2019<br>
 <a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020 (1.03MB)</a><br><br>
