--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -22,7 +22,7 @@ third_nav_title: Media Articles
 <a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/november/Workfare%20-%20With%20You%20For%20A%20Better%20Tomorrow%20-%20Tamil.pdf">Workfare - With You For A Better Tomorrow (Tamil) 306KB</a><br><br>
 
 21 November 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020 (1.03MB)</a><br><br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/november/Workfare%20Enhancements%202020.pdf">Workfare Enhancements 2020 (1.03MB)</a><br><br>
 
 <font size="+2"><b>March 2019</b></font><br><br>
 
