--- a/_newsroom/Media Articles/2019.md
+++ b/_newsroom/Media Articles/2019.md
@@ -27,12 +27,12 @@ third_nav_title: Media Articles
 <font size="+2"><b>March 2019</b></font><br><br>
 
 6 March 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/S%27pore%20way%20of%20helping%20better%20serves%20needs%20of%20low-wage%20workers.pdf">S'pore way of helping better serves needs of low-wage workers, 6 Mar 2019 (4.89MB)</a><br><br>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/march/Singapore%20way%20of%20helping%20better%20serves%20needs%20of%20low-wage%20workers.pdf">S'pore way of helping better serves needs of low-wage workers, 6 Mar 2019 (4.89MB)</a><br><br>
 
 <font size="+2"><b>February 2019</b></font><br><br>
 
 13 February 2019<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Documents/WhyWorkfareworksbetterforSG.pdf">Commentary - Why Workfare works better for Singapore than a minimum wage (353KB)</a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2019/february/WhyWorkfareworksbetterforSG.pdf">Commentary - Why Workfare works better for Singapore than a minimum wage (353KB)</a>
 
 <style>
 img.PressReleaseIcon {
