--- a/_newsroom/Media Articles/2007.md
+++ b/_newsroom/Media Articles/2007.md
@@ -1,6 +1,6 @@
 ---
 title: "2007"
-permalink: /newsroom/Media-Articles/2007
+permalink: /newsroom/Media-Articles/2007/
 description: ""
 third_nav_title: Media Articles
 ---
@@ -10,7 +10,7 @@ third_nav_title: Media Articles
 <font size="+2"><b>October 2007</b></font><br><br>
 
 1 October 2007<br>
-<a class="hyperlink" href="https://www.workfare.gov.sg/Media%20Articles/Pages/Workfare%20The%20Fourth%20Pillar%20of%20Social%20Security%20in%20Singapore.pdf">Workfare: The Fourth Pillar of Social Security in Singapore (650KB)</a>
+<a class="hyperlink" href="https://www.workfare.gov.sg/files/pdf-media-articles/2007/Workfare%20The%20Fourth%20Pillar%20of%20Social%20Security%20in%20Singapore.pdf">Workfare: The Fourth Pillar of Social Security in Singapore (1.18MB)</a>
 
 <style>
 img.PressReleaseIcon {
